packages/typ/tests/fixtures/diagnostics/0044_core_if_condition_non_bool_04.ml.expected
File "0044_core_if_condition_non_bool_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0044_core_if_condition_non_bool_04 is not a valid module name.

File "0044_core_if_condition_non_bool_04.ml", line 1, characters 11-12:
1 | let _ = if 3 then 4 else 5
               ^
Error: The constant 3 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
